--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@ form {
 
 }
 
+.error{
+    color:#e62d2d;
+}
+
 @media only screen and (max-width:800px) {
     .sub_container {
         flex-direction: column;
